--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^3.3.1",
     "cross-env": "^5.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
